--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/JoinCODED/Task-Express-M1-Intro-Crud-Banks#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
